# anvil-recompress.mc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml  tasks.py
.github/workflows/: test.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/src/: errors.rs  lib.rs  options.rs  spec.rs
crates/engine/src/options/: compress.rs
crates/incremental/: Cargo.toml
crates/incremental/src/: cache.rs
src/: lib.rs  main.rs  options.rs
src/options/: compress.rs
