[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Techcable"]
repository = "https://github.com/Techcable/anvil-recompress.mc"
# 1.85 - Rust 2024
# 1.88 - let chains
# 1.91 - Path::with_added_extension
rust-version = "1.91"

[workspace.dependencies]
fastanvil = "0.32"
clap = "4.6"

# workspace deps
anvil-recompress-engine = { version = "0.1", path = "crates/engine" }

[profile.release]
lto = "thin"
