[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
authors = ["Techcable"]
edition = "2024"
# 1.85 - Rust 2024
# 1.88 - let chains
# 1.91 - Path::with_added_extension
rust-version = "1.91"
repository = "https://github.com/Techcable/anvil-recompress.mc"
license = "Apache-2.0"

[workspace.dependencies]
clap = "4.6"
fastanvil = "0.32"

# workspace deps
anvil-recompress-engine = { path = "crates/engine", version = "0.1" }

[profile.release]
lto = "thin"
