[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.2"
authors = ["Techcable"]
edition = "2024"
# 1.85 - Rust 2024
# 1.88 - let chains
# 1.89 - File::lock
# 1.91 - Path::with_added_extension
rust-version = "1.91"
repository = "https://github.com/Techcable/anvil-recompress.mc"
license = "Apache-2.0"

[workspace.dependencies]
clap = "4.6"
fastanvil = "0.32"
slog = {
  version = "2.8",
  features = ["max_level_trace", "nested-values", "release_max_level_trace"]
}

# workspace deps
anvil-recompress-engine = { path = "crates/engine", version = "0.1" }
anvil-recompress-incremental = { path = "crates/incremental", version = "0.1" }

# optimize dependencies
# particularly important for blake3 and compression algorithms
[profile.dev.package."*"]
opt-level = 3
debug-assertions = true

[profile.release]
lto = "thin"
