[package]
name = "anvil-recompress"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Recompress minecraft anvil files (CLI)"
repository.workspace = true
license.workspace = true

[dependencies]
anvil-recompress-engine = { workspace = true, features = ["clap"] }
anvil-recompress-incremental.workspace = true
anyhow = "1"
camino = "1"
clap = { workspace = true, features = ["derive", "string"] }
relative-path = "2"
slog = "2.8"
slog-term = { version = "2.9", features = ["nested-values"] }
walkdir = "2"

[features]
default = ["compress-all"]

# Enable all supported copmression options.
compress-all = ["anvil-recompress-engine/compress-all"]
# Enable lz4 copmression
compress-lz4 = ["anvil-recompress-engine/compress-lz4"]

clap = []
# These features are officially DEPRECATED.
# They were used in v0.1.1 to allow depending only on the library without the CLI.
# Now that the library crate has been split off, they no longer do anything.
cli = []
