[package]
name = "anvil-recompress"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Recompress minecraft anvil files (CLI)"
repository.workspace = true
license.workspace = true

[dependencies]
anvil-recompress-engine = { workspace = true, features = ["clap"] }
anyhow = "1"
clap = { workspace = true, features = ["derive"] }
walkdir = "2"
