[package]
name = "anvil-recompress-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Library for recompressing minecraft anvil files"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
clap = { workspace = true, features = ["derive"], optional = true }
fastanvil.workspace = true
same-file = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

# compression
flate2 = "1"
lz4 = { version = "1", optional = true }

[features]
default = []
# Implement clap traits for some types
clap = ["dep:clap"]

# Enable all the optional compression algorithms
compress-all = ["compress-lz4"]
# Enable lz4 compression
compress-lz4 = ["dep:lz4"]
